[tool.poetry]
name = "dlquant"
version = "0.1.0"
description = ""
authors = ["胡荣兴 <hurongxing@vip.qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
jupyterlab = "^4.2.4"
ruptures = "^1.1.9"
deap = "^1.4.1"
seaborn = "^0.13.2"
concurrent-log-handler = "^0.9.25"
colorlog = "^6.9.0"
pywinauto = "^0.6.8"
pyautogui = "^0.9.54"
opencv-python = "^4.10.0.84"
apscheduler = "^3.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


